# TA-422

./: PySTAT _ 66-1-01422422 grades - 08_24_2023, 06_24 PM.xlsx
Group/1/: p1_group1.ipynb  p3_group1.ipynb  p4_group1.ipynb  p5_group1 4.ipynb  p6_group1.ipynb  p7_group1.ipynb
Group/1/dataset/P1/expected/: p1_output_3.csv
Group/1/dataset/P3/expected/: p3_output_1.csv  p3_output_3.csv
Group/1/dataset/P5/expected/: p5_output_1.csv  p5_output_2.csv
Group/1/dataset/P5/in/: p5_input_dataset_3.csv
Group/10/: p1_group10.ipynb  p5_group10.ipynb  p7_group10.ipynb
Group/11/: p1_group11.ipynb  p2_group11.ipynb  p4_group11.ipynb  p7_group11.ipynb
Group/12/: p1_group12.ipynb  p2_group12.ipynb  p3_group12.ipynb  p4_group12.ipynb
Group/13/: p4_group13.ipynb  p5_group13.ipynb  p6_group13.ipynb  p7_group13.ipynb
Group/2/: p2_group2.ipynb  p3_group2.ipynb  p6_group2.ipynb  p7_group2.ipynb
Group/3/: p2_group3.ipynb  p3_group3.ipynb  p4_group3.ipynb  p6_group3.ipynb
Group/4/: p1_group9.ipynb  p2_group9.ipynb  p3_group9.ipynb  p4_group9.ipynb  p5_group9.ipynb  p6_group9.ipynb
Group/5/: p1_group5 3.ipynb  p2_group5 3.ipynb  p4_group5 3.ipynb  p6_group5 3.ipynb
Group/6/: p1_group6.ipynb  p2_group6.ipynb  p6_group6.ipynb  p7_group6.ipynb
Group/7/: p2_group7.ipynb  p3_group7.ipynb  p4_group7.ipynb  p6_group7.ipynb
Group/8/: p1_group8.ipynb  p3_group8.ipynb  p4_group8.ipynb  p5_group8.ipynb
Group/9/: p1_group9.ipynb  p2_group9.ipynb  p3_group9.ipynb
SharePointDownload/: pyproject.toml
Week1/: Homework1.ipynb  hw1a.py  hw1a_emotion.py  hw1b.py
(+62 files in other folders)
